# ai-steuerberater-agent

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ai_steuerberater_agent/: agent.py  knowledge.py  runtime.py  tools.py
static/: app.js  index.html  styles.css
